# HPC-Distributed-matrix-multiplication

./: CMakeLists.txt  CMakeListsOkeanos.txt  CSCMatrix.cpp  CSCMatrix.h  DenseMatrix.cpp  DenseMatrix.h  batch.batch  compileOkeanos.sh  const.h  copy_tests.sh  copypaste  createBuildDirs.sh  main.cpp  parseInput.cpp  parseInput.h  readme  readme.md  run.sh  runOkeanos.sh  setEnv.sh  test.cpp  utils.cpp  utils.h  welcomeMessage
src/: const.h  densematgen.cpp  main.cpp  parseInput.cpp  parseInput.h  utils.cpp  utils.h
src/algorithms/: BlockedColumnA.cpp  BlockedColumnA.h  BlockedInnerABC.cpp  BlockedInnerABC.h  MatmulAlgorithm.cpp  MatmulAlgorithm.h
src/matrices/: CSCMatrix.cpp  CSCMatrix.h  CSRMatrix.cpp  CSRMatrix.h  DenseMatrix.cpp  DenseMatrix.h  SparseMatrix.cpp  SparseMatrix.h
test/src/main/scala/: generateSparse.scala  main.scala  test.scala
tests/: 1
